# dent

./: Cargo.toml  README.md
cdent/: Cargo.toml  README.md
cdent/examples/: .clang-format  Makefile  cdentq.c  functions.c  simple.c
cdent/include/: cdent.h
cdent/src/: lib.rs
dent-parse/: Cargo.toml
dent-parse/examples/dent/: dict.dent  numbers.dent  recursive.dent
dent-parse/src/: error.rs  lib.rs  repr.rs  tokenizer.rs
dent-parse/src/tests/: mod.rs  parser.rs  tokenizer.rs
dentq/: Cargo.toml  README.md
dentq/src/: main.rs
