[package]
name = "dent-parse"
description = "Duck's Extensible Notation for Things (DENT) parser"
version = "0.1.0"
edition = "2021"
authors = ["Duckonaut"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Duckonaut/dent"
homepage = "https://github.com/Duckonaut/dent"
documentation = "https://docs.rs/dent-parse"
keywords = ["dent", "parser", "format", "data"]

[dependencies]
